--- a/experiments/configs/mixcem_celeba.yaml
+++ b/experiments/configs/mixcem_celeba.yaml
@@ -31,6 +31,7 @@ model_selection_groups:
   - [".*(MixCEM_Final).*(_ce_0_).*$", "MixCEM Final No Calibration (Baseline)"]
   - [".*(MixCEM_Final)_.*(_ce_30_).*$", "MixCEM Final (Baseline)"]
   - [".*(MixCEM_Final)_.*$", "MixCEM Final All (Baseline)"]
+  - [".*(MixCEM_Final).*(emc_50_).*$", "MixCEM Final All Sample (Baseline)"]
 
   - ["^(Entropy_CMCMixIntCEM).*(r_0_).*(_ce_0_).*$", "Entropy CMCMixIntCEM (r=0) No Calibration (Baseline)"]
   - ["^(Entropy_CMCMixIntCEM).*(r_0_).*(_ce_30_).*$", "Entropy CMCMixIntCEM (r=0) (Baseline)"]
@@ -46,7 +47,6 @@ model_selection_groups:
 model_selection_metrics:
   - val_acc_y_random_group_level_True_use_prior_False_int_auc
   - val_acc_y
-  - val_loss
   - val_mixcem_sel_acc
 
 shared_params:
