--- a/experiments/configs/other_noise/mixcem_other_noise_cub_incomplete.yaml
+++ b/experiments/configs/other_noise/mixcem_other_noise_cub_incomplete.yaml
@@ -8,6 +8,7 @@ model_selection_groups:
   - ["^(CEM_Baseline_).*$", "CEM (Baseline)"]
   - ["^(IntCEM_).*$", "IntCEM (Baseline)"]
   - [".*(MixCEM_Final).*$", "MixCEM Final All Sample (Baseline)"]
+  - ["^(ProbCBM_).*$", "ProbCBM (Baseline)"]
 
 model_selection_metrics:
   - val_acc_y_random_group_level_True_use_prior_False_int_auc
@@ -42,11 +43,6 @@ shared_params:
       - policy: "random"
         group_level: True
         use_prior: False
-      - policy: "random"
-        group_level: True
-        use_prior: True  # We will evaluate the learnt policy of IntCEMs!
-        include_run_names:
-          - ".*(IntCEM).*"
 
   # Representation metrics
   # Change to False if you want representation metrics to be included in the
