--- a/experiments/configs/mixcem_cub_incomplete_smaller_ablation.yaml
+++ b/experiments/configs/mixcem_cub_incomplete_smaller_ablation.yaml
@@ -367,7 +367,7 @@ runs:
     run_name: "cwl_ab_MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
     load_path_name: "cwl_ab_MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
 
-    concept_loss_weight: [0, 0.01, 0.1, 1, 2.5]
+    concept_loss_weight: [0, 0.01, 0.1, 1, 2.5, 5]
     emb_size: [16]
     shared_emb_generator: True
     montecarlo_train_tries: [1]
@@ -931,10 +931,9 @@ runs:
     grid_search_mode: exhaustive
 
 
-
-  # Ablation on calibration epochs tries
+  # Ablation on montecarlo tries
   - architecture: 'MCIntCEM'
-    run_name: "calibration_epochs_sample_no_task_cal_MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    run_name: "montecarlo_tries_ab_sample_MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
     load_path_name: "base_ab_MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
 
     concept_loss_weight: [1]
@@ -944,7 +943,7 @@ runs:
     montecarlo_test_tries: [0, 50]
     ood_dropout_prob: [0.1]
     pooling_mode: ['concat']
-    calibration_epochs: [0, 15, 30, 45]
+    calibration_epochs: [30]
     finetune_with_val: [True]
     learnable_temps: False
     class_wise_temperature: False
