--- a/experiments/configs/mixcem_cifar10.yaml
+++ b/experiments/configs/mixcem_cifar10.yaml
@@ -24,10 +24,22 @@ model_selection_groups:
   - ["^(MeanEntropy_CMCMixCEM).*(_ce_30_).*$", "MeanEntropy CMCMixCEM (Baseline)"]
   - ["^(ConceptToLabelModel).*$", "Bayes MLP (Baseline)"]
 
-  - [".*(MixCEM_Final).*(_ce_0_).*$", "MixCEM Final No Calibration (Baseline)"]
-  - [".*(MixCEM_Final)_.*(_ce_30_).*$", "MixCEM Final (Baseline)"]
-  - [".*(MixCEM_Final)_.*$", "MixCEM Final All (Baseline)"]
-  - [".*(MixCEM_Final).*(emc_50_).*$", "MixCEM Final All Sample (Baseline)"]
+  - [".*(MixCEM_Final_t_).*(_ce_0_).*$", "MixCEM Final No Calibration (Baseline)"]
+  - [".*(MixCEM_Final_t_).*(_ce_30_).*$", "MixCEM Final (Baseline)"]
+  - [".*(MixCEM_Final_t_).*$", "MixCEM Final All (Baseline)"]
+  - [".*(MixCEM_Final_t_).*(emc_50_).*$", "MixCEM Final All Sample (Baseline)"]
+  - [".*(MixCEM_Final_t_).*(emc_50_).*(_ce_0_).*$", "MixCEM Final Sample No Calibration (Baseline)"]
+  - [".*(MixCEM_Final_t_).*(emc_50_).*(_ce_30_).*$", "MixCEM Final Sample (Baseline)"]
+  - [".*(MixCEM_Final_t_).*(emc_0_).*$", "MixCEM Final All No Sample (Baseline)"]
+  - [".*(MixCEM_Final_t_).*(emc_0_).*(_ce_0_).*$", "MixCEM Final No Sample No Calibration (Baseline)"]
+  - [".*(MixCEM_Final_t_).*(emc_0_).*(_ce_30_).*$", "MixCEM Final No Sample (Baseline)"]
+
+
+  - [".*(MixCEM_Final_no_randint).*(emc_0_).*(_ce_0_).*$", "MixCEM No RandInt No Calibration (Baseline)"]
+  - [".*(MixCEM_Final_no_randint).*(emc_0_).*(_ce_30_).*$", "MixCEM No RandInt (Baseline)"]
+  - [".*(MixCEM_Final_no_randint).*(emc_50_).*(_ce_0_).*$", "MixCEM No RandInt Sample No Calibration (Baseline)"]
+  - [".*(MixCEM_Final_no_randint).*(emc_50_).*(_ce_30_).*$", "MixCEM No RandInt Sample (Baseline)"]
+
 
 model_selection_metrics:
   - val_acc_y_random_group_level_True_use_prior_False_int_auc
@@ -631,6 +643,130 @@ runs:
       - uncerainty_threshold_percentile
     grid_search_mode: exhaustive
 
+
+
+
+  # NO RANDINT!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  - architecture: 'MCIntCEM'
+    run_name: "MixCEM_Final_no_randint_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "MixCEM_Final_no_randint_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+    concept_loss_weight: [1]
+    emb_size: [16]
+    shared_emb_generator: True
+    montecarlo_train_tries: [1]
+    montecarlo_test_tries: [0]  # No MC Sampling
+    ood_dropout_prob: [0.5]
+    pooling_mode: ['concat']
+    calibration_epochs: [0, 30]
+    finetune_with_val: [True]
+    learnable_temps: False
+    class_wise_temperature: False
+    global_epochs: [0]
+    global_mixed_probs_coeff: 0
+    freeze_global_embeddings: False
+    max_epochs: 50
+    uncerainty_threshold_percentile: [null]
+    inference_threshold: False
+    mixed_probs_coeff: [1]
+    all_intervened_loss_weight: [0.1]
+    calibrate_concept_probs: True
+    dynamic_confidence_scaling: True
+    temperature: [1]
+    scale_fn: entropy
+
+    ###############################################################################################
+
+    # IntCEM stuff
+    embedding_activation: null
+    training_intervention_prob: [0] # MAIN DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+    intervention_task_discount: [1]
+    use_concept_groups: True
+    int_model_use_bn: False
+    int_model_layers: []
+    max_horizon: 1
+    horizon_rate: 1
+    intervention_weight: [0]
+    grid_variables:
+      - training_intervention_prob
+      - intervention_task_discount
+      - ood_dropout_prob
+      - emb_size
+      - finetune_with_val
+      - concept_loss_weight
+      - pooling_mode
+      - intervention_weight
+      - global_epochs
+      - montecarlo_train_tries
+      - mixed_probs_coeff
+      - all_intervened_loss_weight
+      - temperature
+      - calibration_epochs
+      - uncerainty_threshold_percentile
+      - montecarlo_test_tries
+    grid_search_mode: exhaustive
+
+
+  # NO RANDINT!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  - architecture: 'MCIntCEM'
+    run_name: "MixCEM_Final_no_randint_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "MixCEM_Final_no_randint_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+    concept_loss_weight: [1]
+    emb_size: [16]
+    shared_emb_generator: True
+    montecarlo_train_tries: [1]
+    montecarlo_test_tries: [50]  # No MC Sampling
+    ood_dropout_prob: [0.5]
+    pooling_mode: ['concat']
+    calibration_epochs: [0, 30]
+    finetune_with_val: [True]
+    learnable_temps: False
+    class_wise_temperature: False
+    global_epochs: [0]
+    global_mixed_probs_coeff: 0
+    freeze_global_embeddings: False
+    max_epochs: 50
+    uncerainty_threshold_percentile: [null]
+    inference_threshold: False
+    mixed_probs_coeff: [1]
+    all_intervened_loss_weight: [0.1]
+    calibrate_concept_probs: True
+    dynamic_confidence_scaling: True
+    temperature: [1]
+    scale_fn: entropy
+    no_calibration_if_found: True # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+    ###############################################################################################
+
+    # IntCEM stuff
+    embedding_activation: null
+    training_intervention_prob: [0] # MAIN DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+    intervention_task_discount: [1]
+    use_concept_groups: True
+    int_model_use_bn: False
+    int_model_layers: []
+    max_horizon: 1
+    horizon_rate: 1
+    intervention_weight: [0]
+    grid_variables:
+      - training_intervention_prob
+      - intervention_task_discount
+      - ood_dropout_prob
+      - emb_size
+      - finetune_with_val
+      - concept_loss_weight
+      - pooling_mode
+      - intervention_weight
+      - global_epochs
+      - montecarlo_train_tries
+      - mixed_probs_coeff
+      - all_intervened_loss_weight
+      - temperature
+      - calibration_epochs
+      - uncerainty_threshold_percentile
+      - montecarlo_test_tries
+    grid_search_mode: exhaustive
 
 
 
