--- a/experiments/configs/cub_mixcem_incomplete.yaml
+++ b/experiments/configs/cub_mixcem_incomplete.yaml
@@ -11,6 +11,7 @@ model_selection_groups:
   - ["^(CBM_Ind).*$", "Independent CBM (Baseline)"]
   - ["^(Hybrid-CBM_).*(_Baseline_).*$", "Hybrid-CBM (Baseline)"]
   - ["^(CEM_Baseline_).*$", "CEM (Baseline)"]
+  - ["^(FixedCEM_).*$", "FixedCEM (Baseline)"]
   - ["^(IntCEM_).*(_Baseline).*$", "IntCEM (Baseline)"]
   - ["^(MixCEM_).*(_Baseline).*$", "MixCEM (Baseline)"]
   - ["^(ProbCBM_).*$", "ProbCBM (Baseline)"]
@@ -90,7 +91,7 @@ shared_params:
   intervention_config:
     competence_levels: [1]
     intervention_freq: 1
-    intervention_batch_size: 512 #256
+    intervention_batch_size: 256 #512 #256
     val_intervention_policies:
       - policy: "random"
         group_level: True
@@ -229,12 +230,19 @@ shared_params:
             noise_level: 0.5
 
 runs:
-
   - architecture: 'ConceptEmbeddingModel'
     run_name: "CEM_Baseline_cwl_{concept_loss_weight}"
     sigmoidal_prob: True
     training_intervention_prob: 0.25
     embedding_activation: "leakyrelu"
+
+  - architecture: 'FixedConceptEmbeddingModel'
+    run_name: "FixedCEM_cwl_{concept_loss_weight}"
+    sigmoidal_prob: True
+    training_intervention_prob: 0.25
+    embedding_activation: "leakyrelu"
+    weights_path: '{results_dir}/CEM_Baseline_cwl_{concept_loss_weight}'
+    concept_loss_weight: [1] # Best performing weights for CEMs
 
   - architecture: 'PosthocConceptBottleneckModel'
     run_name: "PCBM_reg_{reg_strength}_l1_{l1_ratio}_penalty_{svd_penalty}"
