--- a/experiments/configs/cub_mixcem_incomplete.yaml
+++ b/experiments/configs/cub_mixcem_incomplete.yaml
@@ -12,6 +12,9 @@ model_selection_groups:
   - ["^(Hybrid-CBM_).*(_Baseline_).*$", "Hybrid-CBM (Baseline)"]
   - ["^(CEM_Baseline_).*$", "CEM (Baseline)"]
   - ["^(FixedCEM_).*$", "FixedCEM (Baseline)"]
+  - ["^(FixedGTCEM_).*$", "FixedGTCEM (Baseline)"]
+  - ["^(FixedOnlyCEM_).*$", "FixedOnlyCEM (Baseline)"]
+  - ["^(FixedOnlyGTCEM_).*$", "FixedOnlyGTCEM (Baseline)"]
   - ["^(IntCEM_).*(_Baseline).*$", "IntCEM (Baseline)"]
   - ["^(MixCEM_).*(_Baseline).*$", "MixCEM (Baseline)"]
   - ["^(ProbCBM_).*$", "ProbCBM (Baseline)"]
@@ -49,6 +52,8 @@ model_selection_groups:
   - ["^(Entropy_CMCMixCEM).*(_ce_30_).*(g_ood_0_).*$", "Entropy CMCMixCEM (drop=0) (Baseline)"]
 
   - ["^(ConceptToLabelModel).*$", "Bayes MLP (Baseline)"]
+  - ["^(GlanceNet).*$", "GlanceNet (Baseline)"]
+
 
   - [".*(MixCEM_Final_t_).*(_ce_0_).*$", "MixCEM Final No Calibration (Baseline)"]
   - [".*(MixCEM_Final_t_).*(_ce_30_).*$", "MixCEM Final (Baseline)"]
@@ -142,7 +147,7 @@ shared_params:
 
     additional_test_sets:
       - name: "OOD_sap_0.01"
-        skip_list: [".*(MixCEM_Final_no_task_cal).*"]
+        skip_list: [".*(MixCEM_Final_no_task_cal).*", ".*(Fixed).*(CEM).*"]
         update_previous: True
         dataset_config:
          test_transformation_config:
@@ -152,7 +157,7 @@ shared_params:
            s_vs_p: 0.5
 
       - name: "OOD_sap_0.05"
-        skip_list: [".*(MixCEM_Final_no_task_cal).*"]
+        skip_list: [".*(MixCEM_Final_no_task_cal).*", ".*(Fixed).*(CEM).*"]
         update_previous: True
         dataset_config:
          test_transformation_config:
@@ -171,7 +176,7 @@ shared_params:
             s_vs_p: 0.5
 
       - name: "OOD_sap_0.25"
-        skip_list: [".*(MixCEM_Final_no_task_cal).*"]
+        skip_list: [".*(MixCEM_Final_no_task_cal).*", ".*(Fixed).*(CEM).*"]
         update_previous: True
         dataset_config:
           test_transformation_config:
@@ -181,7 +186,7 @@ shared_params:
             s_vs_p: 0.5
 
       - name: "OOD_sap_0.5"
-        skip_list: [".*(MixCEM_Final_no_task_cal).*"]
+        skip_list: [".*(MixCEM_Final_no_task_cal).*", ".*(Fixed).*(CEM).*"]
         update_previous: True
         dataset_config:
           test_transformation_config:
@@ -192,7 +197,7 @@ shared_params:
 
       - name: "OOD_sap_0.75"
         update_previous: True
-        skip_list: [".*(MixCEM_Final).*"]
+        skip_list: [".*(MixCEM_Final).*", ".*(Fixed).*(CEM).*"]
         dataset_config:
           test_transformation_config:
             post_generation: False
@@ -202,7 +207,7 @@ shared_params:
 
       - name: "OOD_sap_0.9"
         update_previous: True
-        skip_list: [".*(MixCEM_Final).*"]
+        skip_list: [".*(MixCEM_Final).*", ".*(Fixed).*(CEM).*"]
         dataset_config:
           test_transformation_config:
             post_generation: False
@@ -212,7 +217,7 @@ shared_params:
 
       - name: "OOD_sap_0.99"
         update_previous: True
-        skip_list: [".*(MixCEM_Final).*"]
+        skip_list: [".*(MixCEM_Final).*", ".*(Fixed).*(CEM).*"]
         dataset_config:
           test_transformation_config:
             post_generation: False
@@ -222,7 +227,7 @@ shared_params:
 
       - name: "OOD"
         update_previous: True
-        skip_list: [".*(MixCEM_Final).*"]
+        skip_list: [".*(MixCEM_Final).*", ".*(Fixed).*(CEM).*"]
         dataset_config:
           test_transformation_config:
             name: random_noise
@@ -243,6 +248,73 @@ runs:
     embedding_activation: "leakyrelu"
     weights_path: '{results_dir}/CEM_Baseline_cwl_{concept_loss_weight}'
     concept_loss_weight: [1] # Best performing weights for CEMs
+    fixed_embeddings_always: True
+    ground_truth_emb_averages: False
+
+  - architecture: 'FixedConceptEmbeddingModel'
+    run_name: "FixedGTCEM_cwl_{concept_loss_weight}"
+    sigmoidal_prob: True
+    training_intervention_prob: 0.25
+    embedding_activation: "leakyrelu"
+    weights_path: '{results_dir}/CEM_Baseline_cwl_{concept_loss_weight}'
+    concept_loss_weight: [1] # Best performing weights for CEMs
+    fixed_embeddings_always: True
+    ground_truth_emb_averages: True # Difference!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+
+  - architecture: 'FixedConceptEmbeddingModel'
+    run_name: "FixedOnlyCEM_cwl_{concept_loss_weight}"
+    sigmoidal_prob: True
+    training_intervention_prob: 0.25
+    embedding_activation: "leakyrelu"
+    weights_path: '{results_dir}/CEM_Baseline_cwl_{concept_loss_weight}'
+    concept_loss_weight: [1] # Best performing weights for CEMs
+    fixed_embeddings_always: False  # Difference!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+    ground_truth_emb_averages: False
+
+
+  - architecture: 'FixedConceptEmbeddingModel'
+    run_name: "FixedOnlyGTCEM_cwl_{concept_loss_weight}"
+    sigmoidal_prob: True
+    training_intervention_prob: 0.25
+    embedding_activation: "leakyrelu"
+    weights_path: '{results_dir}/CEM_Baseline_cwl_{concept_loss_weight}'
+    concept_loss_weight: [1] # Best performing weights for CEMs
+    fixed_embeddings_always: False  # Difference!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+    ground_truth_emb_averages: True # Difference!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+  - architecture: 'GlanceNet'
+    run_name: "GlanceNet_extra_{extra_dims}_cond_{conditional_prior}_beta_{beta}_recon_weight_{recon_weight}_task_weight_{task_loss_weight}_prior_{prior_loss_weight}_cwl_{concept_loss_weight}"
+    concept_loss_weight: [1]
+    task_loss_weight: [1]
+    beta: [0.01]
+    recon_weight: [0.01]
+    prior_loss_weight: 0.01
+    decoder_output_activation: null #sigmoid
+    hidden_dim: 32
+    decoder_layers: [128, 128, 64, 64, 32, 32, 16, 3] #[512, 256, 128, 64, 3]
+    learning_rate: 0.1 #0.01 # CHANGE!!!!!!!
+    extra_dims: [10, 100, 0]
+    conditional_prior: True # CHANGE!!!!!!!!!!!!!!!!!
+    grid_variables:
+      - extra_dims
+      - concept_loss_weight
+      - recon_weight
+      - beta
+      - task_loss_weight
+    grid_search_mode: exhaustive
+    dataset_config:
+      dataset: "cub"
+      num_workers: 8
+      batch_size: 64
+
+      # DATASET VARIABLES
+      root_dir: /homes/me466/data/CUB200/
+      sampling_percent: 0.25  # [IMPORTANT] Select only a quarter of all concepts!
+      sampling_groups: True
+      test_subsampling: 1
+      weight_loss: True
+
 
   - architecture: 'PosthocConceptBottleneckModel'
     run_name: "PCBM_reg_{reg_strength}_l1_{l1_ratio}_penalty_{svd_penalty}"
