--- a/experiments/configs/mixcem_awa2.yaml
+++ b/experiments/configs/mixcem_awa2.yaml
@@ -55,6 +55,8 @@ model_selection_groups:
   - [".*(MixCEM_Final_no_randint).*(emc_50_).*(_ce_0_).*$", "MixCEM No RandInt Sample No Calibration (Baseline)"]
   - [".*(MixCEM_Final_no_randint).*(emc_50_).*(_ce_30_).*$", "MixCEM No RandInt Sample (Baseline)"]
 
+  - [".*(MixIntCEM_Final_t_).*(emc_50_).*$", "MixIntCEM (Baseline)"]
+
 
 model_selection_metrics:
   - val_acc_y_random_group_level_True_use_prior_False_int_auc
@@ -88,6 +90,11 @@ shared_params:
       - policy: "random"
         group_level: True
         use_prior: False
+      - policy: "random"
+        group_level: True
+        use_prior: True  # We will evaluate the learnt policy of IntCEMs!
+        include_run_names:
+          - ".*(IntCEM).*"
 
   # Representation metrics
   # Change to False if you want representation metrics to be included in the
@@ -799,3 +806,70 @@ runs:
     grid_variables: []
     max_epochs: 75
     feature_drop_out: 0.25
+
+
+
+
+  # MixIntCEM version
+  # Using: MixCEM_Final_t_1_r_1_concat_None_0_mpc_1_tmc_1_emc_50_cwc_False_ce_30_g_ood_0.9_emb_16_True_tip_0.25_itd_1_iw_0_cwl_1
+  # and: IntCEM_emb_size_16_intervention_weight_1_intervention_task_discount_1.5_Baseline_cwl_1
+  - architecture: 'MCIntCEM'
+    run_name: "MixIntCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "MixIntCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_1_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    global_model_path: "g_MixIntCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_1_emc_0_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+    concept_loss_weight: [1]
+    emb_size: [16]
+    shared_emb_generator: True
+    montecarlo_train_tries: [1]
+    montecarlo_test_tries: [50]
+    ood_dropout_prob: [0.9]
+    pooling_mode: ['concat']
+    calibration_epochs: [30]
+    finetune_with_val: [True]
+    learnable_temps: False
+    class_wise_temperature: False
+    global_epochs: [0]
+    global_mixed_probs_coeff: 0
+    freeze_global_embeddings: False
+    max_epochs: 150
+    uncerainty_threshold_percentile: [null]
+    inference_threshold: False
+    mixed_probs_coeff: [1]
+    all_intervened_loss_weight: [1]
+    calibrate_concept_probs: True
+    dynamic_confidence_scaling: True
+    temperature: [1]
+    scale_fn: entropy
+
+    ###############################################################################################
+
+    # IntCEM stuff
+    embedding_activation: null
+    training_intervention_prob: [0.25]
+    intervention_task_discount: [1.5]  # Difference!!!!!!!
+    use_concept_groups: True
+    int_model_use_bn: True
+    int_model_layers: []
+    max_horizon: 6  # Difference!!!!!!!
+    horizon_rate: 1.005  # Difference!!!!!!!
+    gradient_clip_val: 100  # Difference!!!!!!!
+    intervention_weight: [1]  # Difference!!!!!!!
+    grid_variables:
+      - training_intervention_prob
+      - intervention_task_discount
+      - ood_dropout_prob
+      - emb_size
+      - finetune_with_val
+      - concept_loss_weight
+      - pooling_mode
+      - intervention_weight
+      - global_epochs
+      - montecarlo_train_tries
+      - mixed_probs_coeff
+      - all_intervened_loss_weight
+      - temperature
+      - calibration_epochs
+      - uncerainty_threshold_percentile
+      - montecarlo_test_tries
+    grid_search_mode: exhaustive
