--- a/experiments/configs/cub_mixcem_incomplete.yaml
+++ b/experiments/configs/cub_mixcem_incomplete.yaml
@@ -240,37 +240,37 @@ runs:
     fixed_embeddings_always: False  # Difference!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
     ground_truth_emb_averages: True # Difference!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
-  - architecture: 'GlanceNet'
-    run_name: "GlanceNet_extra_{extra_dims}_cond_{conditional_prior}_beta_{beta}_recon_weight_{recon_weight}_task_weight_{task_loss_weight}_prior_{prior_loss_weight}_cwl_{concept_loss_weight}"
-    concept_loss_weight: [1]
-    task_loss_weight: [1]
-    beta: [0.001, 0.01]
-    recon_weight: [0.001, 0.01]
-    prior_loss_weight: 0.01
-    decoder_output_activation: null #sigmoid
-    hidden_dim: 32
-    decoder_layers: [128, 64, 32, 16, 3] #[512, 256, 128, 64, 3]
-    learning_rate: 0.1 #0.01 # CHANGE!!!!!!!
-    extra_dims: [10, 100, 0]
-    conditional_prior: True # CHANGE!!!!!!!!!!!!!!!!!
-    grid_variables:
-      - extra_dims
-      - concept_loss_weight
-      - recon_weight
-      - beta
-      - task_loss_weight
-    grid_search_mode: exhaustive
-    dataset_config:
-      dataset: "cub"
-      num_workers: 8
-      batch_size: 64
+  # - architecture: 'GlanceNet'
+  #   run_name: "GlanceNet_extra_{extra_dims}_cond_{conditional_prior}_beta_{beta}_recon_weight_{recon_weight}_task_weight_{task_loss_weight}_prior_{prior_loss_weight}_cwl_{concept_loss_weight}"
+  #   concept_loss_weight: [1]
+  #   task_loss_weight: [1]
+  #   beta: [0.001, 0.01]
+  #   recon_weight: [0.001, 0.01]
+  #   prior_loss_weight: 0.01
+  #   decoder_output_activation: null #sigmoid
+  #   hidden_dim: 32
+  #   decoder_layers: [128, 64, 32, 16, 3] #[512, 256, 128, 64, 3]
+  #   learning_rate: 0.1 #0.01 # CHANGE!!!!!!!
+  #   extra_dims: [10, 100, 0]
+  #   conditional_prior: True # CHANGE!!!!!!!!!!!!!!!!!
+  #   grid_variables:
+  #     - extra_dims
+  #     - concept_loss_weight
+  #     - recon_weight
+  #     - beta
+  #     - task_loss_weight
+  #   grid_search_mode: exhaustive
+  #   dataset_config:
+  #     dataset: "cub"
+  #     num_workers: 8
+  #     batch_size: 64
 
-      # DATASET VARIABLES
-      root_dir: /homes/me466/data/CUB200/
-      sampling_percent: 0.25  # [IMPORTANT] Select only a quarter of all concepts!
-      sampling_groups: True
-      test_subsampling: 1
-      weight_loss: True
+  #     # DATASET VARIABLES
+  #     root_dir: /homes/me466/data/CUB200/
+  #     sampling_percent: 0.25  # [IMPORTANT] Select only a quarter of all concepts!
+  #     sampling_groups: True
+  #     test_subsampling: 1
+  #     weight_loss: True
 
 
   - architecture: 'PosthocConceptBottleneckModel'
